package(default_visibility = ["//visibility:public"])

cc_library(
    name = "ddprof_lib",
    srcs = [
        "src/base_frame_symbol_lookup.cc",
        "src/build_id.cc",
        "src/cap_display.cc",
        "src/common_mapinfo_lookup.cc",
        "src/common_symbol_lookup.cc",
        "src/container_id.cc",
        "src/create_elf.cc",
        "src/daemonize.cc",
        "src/ddog_profiling_utils.cc",
        "src/ddprof.cc",
        "src/ddprof_cli.cc",
        "src/ddprof_cmdline.cc",
        "src/ddprof_cmdline_watcher.cc",
        "src/ddprof_context_lib.cc",
        "src/ddprof_cpumask.cc",
        "src/ddprof_module_lib.cc",
        "src/ddprof_process.cc",
        "src/ddprof_stats.cc",
        "src/ddprof_worker.cc",
        "src/ddres_list.cc",
        "src/dso.cc",
        "src/dso_hdr.cc",
        "src/dso_symbol_lookup.cc",
        "src/dwfl_thread_callbacks.cc",
        "src/dwfl_wrapper.cc",
        "src/failed_assumption.cc",
        "src/ipc.cc",
        "src/live_allocation.cc",
        "src/logger.cc",
        "src/logger_setup.cc",
        "src/mapinfo_lookup.cc",
        "src/perf.cc",
        "src/perf_clock.cc",
        "src/perf_mainloop.cc",
        "src/perf_ringbuffer.cc",
        "src/perf_watcher.cc",
        "src/pevent_lib.cc",
        "src/presets.cc",
        "src/procutils.cc",
        "src/ratelimiter.cc",
        "src/ringbuffer_utils.cc",
        "src/runtime_symbol_lookup.cc",
        "src/signal_helper.cc",
        "src/stack_helper.cc",
        "src/statsd.cc",
        "src/symbol_map.cc",
        "src/symbolizer.cc",
        "src/sys_utils.cc",
        "src/system_check.cc",
        "src/tags.cc",
        "src/tempfile.cc",
        "src/thread_info.cc",
        "src/tracepoint_config.cc",
        "src/tsc_clock.cc",
        "src/unwind.cc",
        "src/unwind_dwfl.cc",
        "src/unwind_helper.cc",
        "src/unwind_metrics.cc",
        "src/unwind_state.cc",
        "src/user_override.cc",
        "src/uuid.cc",
        "src/version.cc",
        "src/demangler/demangler.cc",
        "src/exporter/ddprof_exporter.cc",
        "src/jit/jitdump.cc",
        "src/pprof/ddprof_pprof.cc",
    ],
    includes = ["../include"],
    deps = [
        "//src/event_parser:event_parser",
        "//third_party/CLI:cli11",
        "//third_party/llvm:llvm_demangle",
    ],
    copts = ["-std=c++20", "-Wall", "-g", "-fno-semantic-interposition", "-fvisibility=hidden"],
    linkopts = ["-labsl_base", "-labsl_str_format", "-ldw", "-lelf", "-lcap", "-pthread", "-lrt", "-ldl"],
)

cc_binary(
    name = "ddprof",
    srcs = ["exe/main.cc"],
    deps = [":ddprof_lib"],
    copts = ["-std=c++20"],
    linkopts = ["-pthread"],
)
